# birlscript

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
birl/: Cargo.toml  DOC.md
birl/src/: compiler.rs  context.rs  lib.rs  modules.rs  parser.rs  standard_lib.rs  vm.rs
birl/src/standard_lib/: mod.rs  text_manip.rs
birlscript/: Cargo.toml  fatorial.birl  fibonacci.birl
birlscript/src/: main.rs
exemplos/: bandeirantes.birl  factorial.birl  fibonacci.birl  funções_e_condicionais.birl  hello_world.birl  variaveis.birl
shell/: Cargo.toml
shell/src/: main.rs
src/: birl.rs  commands.rs  error.rs  eval.rs  interpreter.rs  main.rs  parser.rs  value.rs
src/birl/: arch.rs  compiler.rs  context.rs  mod.rs  parser.rs  vm.rs
src/nparser/: command.rs  function.rs  global.rs  kw.rs  mod.rs
src/old/: eval.rs  interpreter.rs  mod.rs
src/old/nparser/: function.rs  global.rs
src/parser/: birl.lalrpop  birlscript.lalrpop  birlscript.rs  command.rs  function.rs  global.rs  kw.rs  mod.rs
src/vm/: command.rs  comparision.rs  mod.rs  parameter.rs  section.rs  signal.rs  variable.rs
testes/: bandeirantes.birl  fatorial.birl  fibonacci.birl  globais.birl  hello_world.birl  secoes_e_condicionais.birl  variaveis.birl  variaveis_padrao.birl
